--- a/.github/workflows/deploy-hand-readme.yml
+++ b/.github/workflows/deploy-hand-readme.yml
@@ -19,9 +19,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.aws_region }}
-          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
-          role-duration-seconds: 300
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Copy README to S3
         run: |
