ignore clone of open-data-registry

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+open-data-registry/
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,vim,jetbrains,jupyternotebook
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,vim,jetbrains,jupyternotebook
 
