Finish building opendata-transfer stack

--- a/batch-transfer/Makefile
+++ b/batch-transfer/Makefile
@@ -1,15 +1,24 @@
-cf_bucket ?= 'cf-templates-1hz9ldhhl4ahu-us-west-2'  # Tools Sandbox
-VpcId ?= None
-SubnetIds ?= None
+profile ?= tools-sandbox
+
+image_uri ?= '050846374571.dkr.ecr.us-west-2.amazonaws.com/opendata-transfer:latest'  # Tools Sandbox
+vpc_id ?= None
+subnet_ids ?= None
+stack_name ?= opendata-transfer
 deploy:
-	aws cloudformation package \
+	aws --profile $(profile) cloudformation deploy \
 		--template-file batch-cf.yml \
-		--s3-bucket=$(cf_bucket) \
-		--output-template-file packaged.yml && \
-	aws cloudformation deploy \
-		--template-file packaged.yml \
-		--stack-name='opendata-transfer' \
+		--stack-name=$(stack_name) \
 		--capabilities CAPABILITY_IAM \
 		--parameter-overrides \
+		  ImageUri=$(image_uri) \
 		  VpcId=$(vpc_id) \
 		  SubnetIds=$(subnet_ids)
+
+aws_account ?= 050846374571  # Tools Sandbox
+docker:
+	AWS_PROFILE=$(profile) ./docker-build.sh $(aws_account)
+
+s3_prefix ?= foo
+job_name ?= foo
+submit-job:
+	aws --profile $(profile) batch submit-job --job-name $(job_name) --job-queue opendata-transfer-job-queue --job-definition opendata-transfer-job-definition --parameters "s3_prefix=$(s3_prefix)"
