--- a/batch-transfer/batch-cf.yml
+++ b/batch-transfer/batch-cf.yml
@@ -27,7 +27,7 @@ Resources:
   ComputeEnvironment:
     Type: AWS::Batch::ComputeEnvironment
     Properties:
-      ComputeEnvironmentName: opendata-transfer-compute-environment-2
+      ComputeEnvironmentName: opendata-transfer-compute-environment-3
       ServiceRole: !GetAtt BatchServiceRole.Arn
       Type: MANAGED
       ComputeResources:
@@ -35,7 +35,7 @@ Resources:
         MinvCpus: 0
         MaxvCpus: 64
         InstanceTypes:
-          - c7i.4xlarge
+          - c7i.large
         Subnets: !Ref SubnetIds
         InstanceRole: !Ref InstanceProfile
         SecurityGroupIds:
@@ -125,9 +125,9 @@ Resources:
         JobRoleArn: !GetAtt TaskRole.Arn
         ResourceRequirements:
           - Type: VCPU
-            Value: "16"
-          - Type: MEMORY
-            Value: "30000"
+            Value: "2"
+          - Type: MEMORY  # MiB
+            Value: "3000"
         Command:
           - Ref::s3_prefix
 
