--- a/batch-transfer/batch-cf.yml
+++ b/batch-transfer/batch-cf.yml
@@ -128,6 +128,8 @@ Resources:
       JobDefinitionName: opendata-transfer-job-definition
       Type: container
       Parameters:
+        src_bucket: ""
+        dst_bucket: ""
         s3_prefix: ""
       ContainerProperties:
         Image: !Ref ImageUri
@@ -138,6 +140,8 @@ Resources:
           - Type: MEMORY  # MiB
             Value: "30000"
         Command:
+          - Ref::src_bucket
+          - Ref::dst_bucket
           - Ref::s3_prefix
       RetryStrategy:
         Attempts: 3
