--- a/batch-transfer/.aws/config
+++ b/batch-transfer/.aws/config
@@ -1,5 +1,7 @@
 [default]
 region = us-west-2
+retry_mode = standard
+max_attempts = 6
 s3 =
   max_concurrent_requests = 32
   max_queue_size = 10000
