--- a/environment.yml
+++ b/environment.yml
@@ -9,7 +9,7 @@ dependencies:
   - pystac-client
   - jupyter
   # To generate HAND data
-  - asf_tools<0.6
+  - hydrosar>=1.0
   - numpy
   - rasterio
   - shapely
