--- a/batch-transfer/batch-cf.yml
+++ b/batch-transfer/batch-cf.yml
@@ -81,11 +81,13 @@ Resources:
               - s3:PutObject
               - s3:PutObjectTagging
             Resource:
+              - "arn:aws:s3:::its-live-data/*"
               - "arn:aws:s3:::its-live-open/*"
               - "arn:aws:s3:::its-live-project/*"
           - Effect: Allow
             Action: s3:ListBucket
             Resource:
+              - "arn:aws:s3:::its-live-data"
               - "arn:aws:s3:::its-live-open"
               - "arn:aws:s3:::its-live-project"
 
