--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 open-data-registry/
+events/README.html
+events/index.html
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,vim,jetbrains,jupyternotebook
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,vim,jetbrains,jupyternotebook
