--- a/.github/workflows/deploy-asf-event-data-files.yml
+++ b/.github/workflows/deploy-asf-event-data-files.yml
@@ -6,8 +6,9 @@ on:
       - asf-event-data/README.md
       - shared/index.html
 
+
 jobs:
-  dockerize:
+  deploy-asf-event-data-files:
     runs-on: ubuntu-latest
     environment:
       name: asf-event-data
@@ -26,7 +27,7 @@ jobs:
         uses: baileyjm02/markdown-to-pdf@v1
         with:
           input_path: asf-event-data/README.md
-          output_dir: asf-event-data
+          output_dir: asf-event-data/
           build_pdf: false
 
       - name: Create asf-event-data/index.html
