--- a/.github/workflows/deploy-hand-readme.yml
+++ b/.github/workflows/deploy-hand-readme.yml
@@ -3,17 +3,35 @@ on:
     branches:
       - main
     paths:
-      - hand/readme.html
+      - glo-30-hand/README.md
+      - shared/index.html
 
 jobs:
-  dockerize:
+  deploy-glo-30-hand-files:
     runs-on: ubuntu-latest
     environment:
-      name: HAND
-      url: https://glo-30-hand.s3.us-west-2.amazonaws.com/readme.html
+      name: glo-30-hand
+      url: https://glo-30-hand.s3.us-west-2.amazonaws.com/README.html
 
     steps:
       - uses: actions/checkout@v4
+
+      # To test, run:
+      #     docker run -it --rm -v ${PWD}:/github/workspace \
+      #     -e INPUT_INPUT_PATH=glo-30-hand/README.md \
+      #     -e INPUT_OUTPUT_DIR=glo-30-hand/ \
+      #     -e INPUT_BUILD_PDF=false \
+      #     ghcr.io/baileyjm02/markdown-to-pdf/markdown-to-pdf:latest
+      - name: Create glo-30-hand/README.html
+        uses: baileyjm02/markdown-to-pdf@v1
+        with:
+          input_path: glo-30-hand/README.md
+          output_dir: glo-30-hand/
+          build_pdf: false
+
+      - name: Create glo-30-hand/index.html
+        run: |
+          sed "165s/\[OPENDATA_BUCKET_NAME\]/glo-30-hand/" shared/index.html > glo-30-hand/index.html
 
       - uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -21,6 +39,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Copy README to S3
+      - name: Copy README and Index to S3
         run: |
-          aws s3 cp ./hand/readme.html s3://glo-30-hand/readme.html
+          aws s3 cp ./glo-30-hand/README.html s3://glo-30-hand/README.html
+          aws s3 cp ./glo-30-hand/index.html s3://glo-30-hand/index.html
