--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 open-data-registry/
 asf-event-data/README.html
 asf-event-data/index.html
+glo-30-hand/readme.html
+glo-30-hand/index.html
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,vim,jetbrains,jupyternotebook
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,vim,jetbrains,jupyternotebook
