--- a/s1-orbits/s1-orbits-iam-users-cf.yml
+++ b/s1-orbits/s1-orbits-iam-users-cf.yml
@@ -1,7 +1,7 @@
 AWSTemplateFormatVersion: 2010-09-09
 
 Resources:
-  ItsLiveIamUsers:
+  S1OrbitsIamUsers:
     Type: AWS::IAM::User
     Properties:
       UserName: betolink  # Luis Lopez; https://github.com/betolink
