fix resource name in data-publisher.yml

--- a/asf-event-data/data-publisher.yml
+++ b/asf-event-data/data-publisher.yml
@@ -6,7 +6,7 @@ Parameters:
     Type: String
 
 Resources:
-  GithubActionsUser:
+  User:
     Type: AWS::IAM::User
     Properties:
       UserName: data-publisher
